[package]
name = "ethers-middleware"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Middleware implementations for the ethers-rs crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-contract = { workspace = true, features = ["abigen"] }
ethers-core.workspace = true
ethers-etherscan.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true

async-trait = { version = "0.1.64", default-features = false }
auto_impl = { version = "1.0.1", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0", default-features = false }
futures-util = { version = "^0.3" }
futures-locks = { version = "0.7", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false }

# for gas oracles
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
url = { version = "2.3.1", default-features = false }

serde_json = { version = "1.0.93", default-features = false }
instant = { version = "0.1.12", features = ["now"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.25" }

[dev-dependencies]
ethers-providers = { workspace = true, features = ["ws", "rustls"] }
ethers-solc.workspace = true

hex = { version = "0.4.3", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false }
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.25", default-features = false, features = ["rt", "macros", "time"] }

[features]
default = ["rustls"]
celo = ["ethers-core/celo", "ethers-providers/celo", "ethers-signers/celo", "ethers-contract/celo"]
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
