[package]
name = "ethers-signers"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "A unified interface for locally signing Ethereum transactions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core = { workspace = true, features = ["eip712"] }

thiserror = { version = "1.0.38", default-features = false }
coins-bip32 = "0.7.0"
coins-bip39 = "0.7.0"
coins-ledger = { version = "0.7.1", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
async-trait = { version = "0.1.64", default-features = false }
elliptic-curve = { version = "0.12.3", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
rand = { version = "0.8.5", default-features = false }
yubihsm = { version = "0.41.0", features = ["secp256k1", "http", "usb"], optional = true }
futures-util = { version = "^0.3", optional = true }
futures-executor = { version = "^0.3", optional = true }
semver = { version = "1.0.16", optional = true }
tracing = { version = "0.1.37" }
trezor-client = { version = "0.0.7", optional = true, default-features = false, features = [
    "f_ethereum",
] }

# aws
rusoto_core = { version = "0.48.0", default-features = false, optional = true }
rusoto_kms = { version = "0.48.0", default-features = false, optional = true }
spki = { version = "0.6.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eth-keystore = { version = "0.5.0" }
home = { version = "0.5.4", optional = true }

[dev-dependencies]
ethers-contract-derive.workspace = true
ethers-derive-eip712.workspace = true

serde_json = { version = "1.0.93" }
yubihsm = { version = "0.41.0", features = ["secp256k1", "usb", "mockhsm"] }
tokio = { version = "1.25", default-features = false, features = ["macros", "rt"] }
tempfile = "3.4.0"
tracing-subscriber = "0.3.16"

[features]
futures = ["futures-util", "futures-executor"]
celo = ["ethers-core/celo"]
ledger = ["coins-ledger", "futures", "semver"]
yubi = ["yubihsm"]
aws = ["rusoto_core/rustls", "rusoto_kms/rustls", "spki"]
trezor = ["trezor-client", "futures", "semver", "home"]
