[package]
name = "ethers-abi"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethers-types = { version = "0.1.0", path = "../ethers-types" }
ethers-utils = { version = "0.1.0", path = "../ethers-utils" }

ethabi = "12.0.0"
arrayvec = "0.5.1"
thiserror = { version = "1.0.19", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.53", default-features = false }
