[package]
name = "ethers-contract"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethers-contract-abigen = { path = "ethers-contract-abigen", optional = true }
ethers-contract-derive = { path = "ethers-contract-derive", optional = true }

ethers-abi = { path = "../ethers-abi" }
ethers-providers = { path = "../ethers-providers" }
ethers-signers = { path = "../ethers-signers" }
ethers-types = { path = "../ethers-types" }

serde = { version = "1.0.110", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
thiserror = { version = "1.0.19", default-features = false }
once_cell = "1.4.0"

[features]
default = ["abigen"]
abigen = ["ethers-contract-abigen", "ethers-contract-derive"]
