[package]
name = "ethers-contract"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethers-contract-abigen = { version = "0.1.0", path = "ethers-contract-abigen", optional = true }
ethers-contract-derive = { version = "0.1.0", path = "ethers-contract-derive", optional = true }

ethers-providers = { version = "0.1.0", path = "../ethers-providers" }
ethers-signers = { version = "0.1.0", path = "../ethers-signers" }
ethers-types = { version = "0.1.0", path = "../ethers-types" }

serde = { version = "1.0.110", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
thiserror = { version = "1.0.19", default-features = false }
once_cell = "1.4.0"
tokio = { version = "0.2.21", default-features = false }

[features]
default = ["abigen"]
abigen = ["ethers-contract-abigen", "ethers-contract-derive"]
