[package]
name = "ethers-signers"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethers-types = { version = "0.1.0", path = "../ethers-types" }
ethers-providers = { version = "0.1.0", path = "../ethers-providers" }
ethers-utils = { version = "0.1.0", path = "../ethers-utils" }
