[package]
name = "ethers-types"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-utils = { path = "../ethers-utils" }

ethereum-types = { version = "0.9.2", default-features = false, features = ["serialize"] }
serde = { version = "1.0.110", default-features = false, features = ["derive"] }
rlp = { version = "0.4.5", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
thiserror = { version = "1.0.19", default-features = false }

# crypto
secp256k1 = { version = "0.17.2", default-features = false, features = ["std", "recovery", "rand"] }
rand = { version = "0.5.1", default-features = false } # this should be the same rand crate version as the one in secp
zeroize = { version = "1.1.0", default-features = false }
